# comment_formatter

./: .flake8  .travis.yml  LICENSE  README.md  pyproject.toml
comment_formatter/: formatter.py  run.py
tests/: test_comment_formatter.py
tests/examples/: foo.py  input_1.py  input_2.py  input_3.py  input_4.py  input_7.py  output_5.py  output_6.py  output_7.py
